--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             background-color: lightgray;
         }
         .deposit {
-            font-size: 24px;
+            font-size: 20px;
             font-weight: bold;
-            color: darkblue;
+            color: red;
         }
         .warning {
             font-size: 20px;
@@ -173,8 +173,11 @@
     </div>
     <h2 class="amount" id="amount">Memuat data...</h2>
     <p id="warning" class="warning">Menunggu data...</p>
+    <p>______________________________</p>
     <h2>DEPOSIT:</h2>
     <h2 class="deposit" id="deposit">Memuat data...</h2>
+    <p>______________________________</p>
+    <p>Nilai transaksi tidak boleh melebihi deposit, konfirmasi owner untuk batasan transaksi per hari</p>
     <p class="footer"><i>Design By PIGOLD 2025</i></p>
 </body>
 </html>
