--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 });
 
                 if (!transaksiHariIni) {
-                    document.getElementById("amount").innerText = "Tidak ada transaksi hari ini";
+                    document.getElementById("amount").innerText = "Belum ada transaksi hari ini";
                 } else {
                     document.getElementById("amount").innerText = `Rp ${totalTransaksi.toLocaleString('id-ID')}`;
                 }
